src/snapshots/lang_rs__parser__tests__fixtures__functions.snap
---
source: src/parser.rs
expression: ast
---
Ok(
    Ast {
        statements: [
            FunctionDecl {
                name: "my_first_func",
                arguments: FunctionArgsList {
                    args: [],
                },
                body: [
                    Assignment {
                        name: "x",
                        expr: Constant(
                            Int(
                                5,
                            ),
                        ),
                    },
                    Assignment {
                        name: "y",
                        expr: BinaryOp {
                            operator: Multiply,
                            left: Variable(
                                "x",
                            ),
                            right: Constant(
                                Int(
                                    2,
                                ),
                            ),
                        },
                    },
                    BareExpression(
                        Variable(
                            "y",
                        ),
                    ),
                ],
            },
            FunctionDecl {
                name: "func_with_closure",
                arguments: FunctionArgsList {
                    args: [],
                },
                body: [
                    Assignment {
                        name: "x",
                        expr: Constant(
                            Int(
                                5,
                            ),
                        ),
                    },
                    FunctionDecl {
                        name: "top_stuff",
                        arguments: FunctionArgsList {
                            args: [],
                        },
                        body: [
                            BareExpression(
                                BinaryOp {
                                    operator: Multiply,
                                    left: Variable(
                                        "x",
                                    ),
                                    right: Constant(
                                        Int(
                                            2,
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                    BareExpression(
                        Variable(
                            "top_stuff",
                        ),
                    ),
                ],
            },
        ],
    },
)
